--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -125,6 +125,9 @@
          <property name="acceptDrops">
           <bool>true</bool>
          </property>
+         <property name="readOnly">
+          <bool>true</bool>
+         </property>
         </widget>
        </widget>
       </item>
