添加选择可执行文件输出路径功能

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -166,21 +166,21 @@
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
-         <layout class="QGridLayout" name="gridLayout_2">
-          <item row="0" column="0">
+         <layout class="QVBoxLayout" name="verticalLayout_2">
+          <item>
            <spacer name="verticalSpacer">
             <property name="orientation">
              <enum>Qt::Orientation::Vertical</enum>
             </property>
             <property name="sizeHint" stdset="0">
              <size>
-              <width>17</width>
-              <height>127</height>
+              <width>14</width>
+              <height>115</height>
              </size>
             </property>
            </spacer>
           </item>
-          <item row="1" column="0">
+          <item>
            <layout class="QGridLayout" name="gridLayout">
             <item row="0" column="0">
              <widget class="QLabel" name="label_2">
@@ -518,25 +518,6 @@
               </property>
              </widget>
             </item>
-            <item row="4" column="1" colspan="2">
-             <widget class="QComboBox" name="exefilescopecomboBox">
-              <item>
-               <property name="text">
-                <string>PRIVATE</string>
-               </property>
-              </item>
-              <item>
-               <property name="text">
-                <string>INTERFACE</string>
-               </property>
-              </item>
-              <item>
-               <property name="text">
-                <string>PUBLIC</string>
-               </property>
-              </item>
-             </widget>
-            </item>
             <item row="4" column="3">
              <widget class="QPushButton" name="exefilescopepushButton">
               <property name="sizePolicy">
@@ -559,17 +540,105 @@
               </property>
              </widget>
             </item>
+            <item row="5" column="0">
+             <widget class="QLabel" name="label_5">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="minimumSize">
+               <size>
+                <width>100</width>
+                <height>0</height>
+               </size>
+              </property>
+              <property name="layoutDirection">
+               <enum>Qt::LayoutDirection::LeftToRight</enum>
+              </property>
+              <property name="frameShadow">
+               <enum>QFrame::Shadow::Plain</enum>
+              </property>
+              <property name="text">
+               <string>可执行文件输出路径:</string>
+              </property>
+              <property name="wordWrap">
+               <bool>false</bool>
+              </property>
+             </widget>
+            </item>
+            <item row="5" column="1" colspan="2">
+             <widget class="QLineEdit" name="exefileoutputlineEdit">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="minimumSize">
+               <size>
+                <width>150</width>
+                <height>0</height>
+               </size>
+              </property>
+              <property name="text">
+               <string/>
+              </property>
+             </widget>
+            </item>
+            <item row="5" column="3">
+             <widget class="QPushButton" name="exefileoutputpushButton">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="minimumSize">
+               <size>
+                <width>30</width>
+                <height>0</height>
+               </size>
+              </property>
+              <property name="text">
+               <string>浏览目录</string>
+              </property>
+              <property name="flat">
+               <bool>false</bool>
+              </property>
+             </widget>
+            </item>
+            <item row="4" column="1" colspan="2">
+             <widget class="QComboBox" name="exefilescopecomboBox">
+              <item>
+               <property name="text">
+                <string>PRIVATE</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>INTERFACE</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>PUBLIC</string>
+               </property>
+              </item>
+             </widget>
+            </item>
            </layout>
           </item>
-          <item row="2" column="0">
+          <item>
            <spacer name="verticalSpacer_2">
             <property name="orientation">
              <enum>Qt::Orientation::Vertical</enum>
             </property>
             <property name="sizeHint" stdset="0">
              <size>
-              <width>17</width>
-              <height>127</height>
+              <width>14</width>
+              <height>116</height>
              </size>
             </property>
            </spacer>
