--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -91,16 +91,16 @@
           <bool>true</bool>
          </property>
          <property name="dragEnabled">
-          <bool>true</bool>
+          <bool>false</bool>
          </property>
          <property name="dragDropOverwriteMode">
           <bool>true</bool>
          </property>
          <property name="dragDropMode">
-          <enum>QAbstractItemView::DragDropMode::DropOnly</enum>
+          <enum>QAbstractItemView::DragDropMode::InternalMove</enum>
          </property>
          <property name="defaultDropAction">
-          <enum>Qt::DropAction::LinkAction</enum>
+          <enum>Qt::DropAction::CopyAction</enum>
          </property>
          <property name="autoExpandDelay">
           <number>10</number>
